# adventofcode21

./: .gitignore  README.md
.github/workflows/: badge-update.yml
01/: build.gradle.kts
01-kotlin/: README.md
01-kotlin/src/main/kotlin/: Part02.kt
01/src/main/kotlin/: Main.kt
02/: README.md  d02.cabal
02-haskell/: LICENSE
02-haskell/src/: Part01.hs
02/src/: Main.hs  Part02.hs
03/: .gitignore  main.c
03-c/: CMakeLists.txt  README.md
04/: README.md  main.py  part01.py  part02.py
04-python/: util.py
05/: README.md
05-rust/: README.md
05-rust/src/: part01.rs
05/src/: main.rs  part01.rs  part02.rs  util.rs
06/: go.mod  main.go  part01.go  simulation.go
06-go/: README.md  main.go
07/: README.md  main.pl
07-perl/: main.pl
08-v/: README.md  main.v
09/: README.md  main.lua
09-lua/: main.lua
10-chef/: README.md  part01.chef  part02.chef
10-chef/input/: input
11-julia/: README.md
11-julia/src/: main.jl
12-c++/: CMakeLists.txt  README.md
12-c++/src/: nodes.cpp  nodes.h  part01.cpp  part02.cpp
12/src/: main.cpp  part02.cpp
13-groovy/: README.md  build.gradle  settings.gradle
14-java/: README.md  build.gradle  settings.gradle
15-php/: README.md  main.php  part01.php  part02.php
16-js/: README.md  package.json
16-js/src/: bit-buffer.js  index.js  packet.js
17-clojure/: README.md  main.clj
18-r/: README.md  main.R  snailfish.R  util.R
19-erlang/: README.md
19-erlang/src/: main.erl
20-ruby/: README.md  main.rb
21-d/: .gitignore  README.md  dub.json
21-d/source/: app.d
(+5 files in other folders)
