name:                d02
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Siphalor/d02#readme
license:             BSD3
license-file:        LICENSE
author:              Siphalor
maintainer:          info@siphalor.de
copyright:           Siphalor
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable d02
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:
    Part01
    Part02
